--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,9 @@
 
     <header class="bg-white shadow-md fixed w-full z-10 top-0 px-4 md:px-10">
         <div class="container mx-auto px-0 py-4 flex justify-between items-center">
-            <img src="/static/image/Logo LS.png" alt="Logo" class="h-6 w-auto">
+            <a href="/">
+                <img src="/static/image/Logo LS.png" alt="Logo" class="h-6 w-auto">
+            </a>
 
             <!-- Hamburger button (hidden on md+) -->
             <button id="hamburger-btn" aria-label="Toggle menu" aria-expanded="false"
