--- a/templates/cms_page/cmsbase.html
+++ b/templates/cms_page/cmsbase.html
@@ -73,43 +73,37 @@
                     </li>
                     <!-- Settings Menu Item -->
                     <li>
-                        <a href="" class="group flex items-center text-md space-x-3 py-2  rounded-md transition-colors">
+                        <a href="{{url_for('main.jadwal')}}" class="group flex items-center text-md space-x-3 py-2  rounded-md transition-colors">
                             <!-- Icon -->
-                            <svg class="w-4 h-4 text-gray-500 group-hover:text-blue-600 transition-colors" fill="none"
-                                stroke="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
-                                stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                <path d="M19 13l-4 4-4-4"></path>
-                                <path d="M5 7l4-4 4 4"></path>
-                                <path d="M9 12h6"></path>
-                            </svg>
+                            <img src="{{ url_for('static', filename='image/schedule.svg') }}" alt="Dashboard Icon"
+                                class="w-4 h-4 object-contain group-hover:brightness-110 transition" />
+                            <span>Jadwal</span>
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="{{url_for('main.rute')}}" class="group flex items-center text-md space-x-3 py-2  rounded-md transition-colors">
+                            <!-- Icon -->
+                            <img src="{{ url_for('static', filename='image/rute.svg') }}" alt="Dashboard Icon"
+                                class="w-4 h-4 object-contain group-hover:brightness-110 transition" />
                             <span>Rute</span>
                         </a>
                     </li>
 
                     <li>
-                        <a href="" class="group flex items-center text-md space-x-3 py-2  rounded-md transition-colors">
+                        <a href="{{url_for('main.armada')}}" class="group flex items-center text-md space-x-3 py-2  rounded-md transition-colors">
                             <!-- Icon -->
-                            <svg class="w-4 h-4 text-gray-500 group-hover:text-blue-600 transition-colors" fill="none"
-                                stroke="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
-                                stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                <path d="M19 13l-4 4-4-4"></path>
-                                <path d="M5 7l4-4 4 4"></path>
-                                <path d="M9 12h6"></path>
-                            </svg>
+                            <img src="{{ url_for('static', filename='image/bus.svg') }}" alt="Dashboard Icon"
+                                class="w-4 h-4 object-contain group-hover:brightness-110 transition" />
                             <span>Armada</span>
                         </a>
                     </li>
 
                     <li>
-                        <a href="" class="group flex items-center text-md space-x-3 py-2  rounded-md transition-colors">
+                        <a href="{{url_for('main.artikel')}}" class="group flex items-center text-md space-x-3 py-2  rounded-md transition-colors">
                             <!-- Icon -->
-                            <svg class="w-4 h-4 text-gray-500 group-hover:text-blue-600 transition-colors" fill="none"
-                                stroke="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
-                                stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                <path d="M19 13l-4 4-4-4"></path>
-                                <path d="M5 7l4-4 4 4"></path>
-                                <path d="M9 12h6"></path>
-                            </svg>
+                            <img src="{{ url_for('static', filename='image/article.svg') }}" alt="Dashboard Icon"
+                                class="w-4 h-4 object-contain group-hover:brightness-110 transition" />
                             <span>Artikel</span>
                         </a>
                     </li>
@@ -118,12 +112,8 @@
                         <a href="{{ url_for('auth.logout') }}"
                             class="group flex items-center text-md space-x-3 py-2 rounded-md transition-colors">
                             <!-- Icon -->
-                            <svg class="w-4 h-4 text-gray-500 group-hover:text-blue-600 transition-colors" fill="none"
-                                stroke="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
-                                stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                <path d="M10 17l5-5-5-5"></path>
-                                <path d="M15 12H3"></path>
-                            </svg>
+                            <img src="{{ url_for('static', filename='image/Logout.svg') }}" alt="Dashboard Icon"
+                                class="w-4 h-4 object-contain group-hover:brightness-110 transition" />
                             <span>Logout</span>
                         </a>
                     </li>
